<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_contact_information">Contact information</string>
    <string name="add">Add Contact</string>
    <string name="del">Delete Contact</string>
    <string name="sort">Sort Contacts</string>
    <string name="edit">Edit Contact</string>
    <string name="First">First Name</string>
    <string name="Last">Last Name</string>
    <string name="Mob">Mobile Phone</string>
    <string name="Home">Home Number</string>
    <string name="Work">Work Number</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="dob">Date Of Birth</string>
    <string name="title_activity_delete_contact">Delete Contact</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="Save">Save Contact</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="picture">Picture Gallery</string>
    <string name="title_activity_sort_contact">SortContactActivity</string>
    <string name="sortfn">Sort by first name</string>
    <string name="sortln">Sort by last name</string>
    <string name="sortnum">Sort by number</string>

</resources>