<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContactActivity" >

    <ImageButton
        android:id="@+id/add_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        >

     </ImageButton>
    
        
	<LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/First" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>
	   
    <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Last"
	         />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>
    <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Mob" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>
    <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Home" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>

    <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Work" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>

   <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Email" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
	</LinearLayout>
   <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Address" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>

    <LinearLayout
	    	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/dob" />
	    <EditText
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>
	</LinearLayout>
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<Button
		  android:id="@+id/save_contact_button"
		  android:layout_width="0px"
		  android:layout_height="wrap_content"
		  android:layout_weight="1"
		        
		  android:text="@string/Save"
		  android:textSize="12sp" 
		  android:textColor="@color/Blue" />
<Button
		  android:id="@+id/cancel2_contact_button"
		  android:layout_width="0px"
		  android:layout_height="wrap_content"
		  android:layout_weight="1"
		        
		  android:text="@string/cancel"
		  android:textColor="@color/Blue"
		  android:textSize="12sp"/>
</LinearLayout>
</LinearLayout>