<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical"
    tools:context=".SortContactActivity" >

    <Button
        android:id="@+id/button_1"
        android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:text="@string/sortfn"
		/>
    <Button
        android:id="@+id/button_2"
        android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:text="@string/sortln"
		/>
    <Button
        android:id="@+id/button_3"
        android:layout_width="match_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:text="@string/sortnum"
		/>

</LinearLayout>