<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    tools:context=".MainActivity" >


		<SearchView
		android:layout_width="fill_parent"
		android:layout_height="32dp"/>


    <ListView
        android:id="@+id/main_listview"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/hello_world"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars= "vertical"
        android:fadeScrollbars="false"
        android:scrollbarStyle="outsideOverlay" >

    </ListView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		   <Button
		        android:id="@+id/add_contact_button"
		        android:layout_width="0px"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        
		        android:text="@string/add"
		        android:textSize="12sp" 
		        android:textColor="@color/Blue"
		         />
	
		    <Button
		        android:id="@+id/delete_contact_button"
		        android:layout_width="0px"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        
		        android:text="@string/del"
		        android:textColor="@color/Blue"
		        android:textSize="12sp"
		        
		        
		         />
		  
</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
		   <Button
		        android:id="@+id/sort_contact_button"
		        android:layout_width="0px"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        
		        android:text="@string/sort"
		        android:textSize="12sp"
		        android:textColor="@color/Blue" />
	
		    <Button
		        android:id="@+id/edit_contact_button"
		        android:layout_width="0px"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        
		        android:text="@string/edit"
		        android:textSize="12sp"
		        android:textColor="@color/Blue" />
		    
		    	
		  
</LinearLayout>
    
</LinearLayout>